--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,34 @@ img{
     width: 100%;
     height: auto;
   }
+/*-------------------------------tabs*/
+.tab {
+    overflow: hidden;
+    border: 1px solid var(--hoverorange);
+    background-color: white;
+  }
+  
+  .tab button {
+    background-color: inherit;
+    float: left;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-weight:bold;
+  }
+  
+  .tab button:hover {
+    background-color: #FFFFFF;
+  }
+  
+  .tab button.active {
+    background-color: var(--hoverorange);
+  }
+  
+  .tabcontent {
+    padding: 6px 12px;
+    border: 1px solid var(--nice-pink);
+  }
 
 /*-------------------------------Colors */
 
@@ -138,17 +166,18 @@ img{
 
   /*hide the skip link*/
 .skip-link {
-    height: 30px;
-    left: 50%;
-    position: absolute;
-    transform: translateY(-100%);
-    transition: 0.3s;
-    display:none
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
   }
   
 
 /* focused, this is the accessible version */
 .skip-link:focus {
-    transform: translateY(0%);
-    display:visible;
-}
+  position: static;
+  width: auto;
+  height: auto;
+  overflow: visible;}
